--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,20 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Dark color scheme */
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255; /* White color for text */
+  --background-start-rgb: 23, 25, 30; /* Dark bluish-greenish background */
+  --background-end-rgb: 23, 25, 30; /* Dark bluish-greenish background */
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
